--- a/docs/0-RES/arqui/2/tareas/mplabx/corrimiento-derecha-izquierda.X/nbproject/Makefile-genesis.properties
+++ b/docs/0-RES/arqui/2/tareas/mplabx/corrimiento-derecha-izquierda.X/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Fri Aug 25 10:42:44 CST 2023
+#Fri Aug 25 11:48:21 CST 2023
 default.languagetoolchain.version=2.41
 default.Pack.dfplocation=C\:\\Program Files\\Microchip\\MPLABX\\v6.15\\packs\\Microchip\\PIC18Fxxxx_DFP\\1.4.151
 default.com-microchip-mplab-mdbcore-simulator-Simulator.md5=aa9d1097190a66d1314d421a6f2603b4
@@ -7,7 +7,7 @@ default.com-microchip-mplab-nbide-toolchain-picasm-PICASMLanguageToolchain.md5=a
 conf.ids=default
 default.languagetoolchain.dir=C\:\\Program Files\\Microchip\\xc8\\v2.41\\pic-as\\bin
 host.id=1pmn-lq85-f0
-configurations-xml=a7289f098463649cb996122c27784129
+configurations-xml=b2355bf9084682da91a6167531e2cb18
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=e62346c0c0ecee2637e613b49cb7b7fa
-proj.dir=C\:\\Users\\danib\\OneDrive - Universidad Rafael Landivar\\Documentos\\Obsidian\\url-notas\\docs\\0-RES\\arqui\\2\\clase1\\mplabx\\holamundo.X
+proj.dir=C\:\\Users\\danib\\OneDrive - Universidad Rafael Landivar\\Documentos\\Obsidian\\url-notas\\docs\\0-RES\\arqui\\2\\tareas\\mplabx\\corrimiento-derecha-izquierda.X
 host.platform=windows
