--- a/docs/0-RES/tecnologias-emergentes/tarea-red-neuronal/2-react-app/ia-objetos/package.json
+++ b/docs/0-RES/tecnologias-emergentes/tarea-red-neuronal/2-react-app/ia-objetos/package.json
@@ -10,14 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@tensorflow/tfjs": "^4.22.0",
-    "@tensorflow/tfjs-react-native": "^1.0.0",
     "expo": "~52.0.37",
     "expo-image-picker": "^16.0.6",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-webview": "^13.13.2"
+    "react-native-webview": "^13.13.2",
+    "expo-asset": "~11.0.4",
+    "expo-file-system": "~18.0.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
