--- a/docs/0-RES/tecnologias-emergentes/proyecto final/audio_iot_server/iot_api/model/class_mapping.json
+++ b/docs/0-RES/tecnologias-emergentes/proyecto final/audio_iot_server/iot_api/model/class_mapping.json
@@ -1,11 +1,11 @@
 {
     "dog_bark": {
         "id": 3,
-        "display": false
+        "display": true
     },
     "children_playing": {
         "id": 2,
-        "display": false
+        "display": true
     },
     "car_horn": {
         "id": 1,
